Modificaciones (SqlServerBDAccess), no funciona modificar y borrar

--- a/AgapeaDAM/Views/Cliente/InicioPanel.cshtml
+++ b/AgapeaDAM/Views/Cliente/InicioPanel.cshtml
@@ -3,6 +3,12 @@
 <div class="container">
     <div class="row">
         <div class="col">
+            <div class="row">
+                <div class="col">
+                    <div asp-validation-summary="All" class="text-danger"></div>
+                </div>
+            </div>
+
             <h2>Mi perfil</h2>
             <div></div><!--sangria-->
             <div class="alert alert-secondary" data-bs-toggle="collapse" href="#collapseDatos">Datos de perfil</div>
