Error vista InicioPanel, click para seleccionar foto Arreglado

--- a/AgapeaDAM/Views/Cliente/InicioPanel.cshtml
+++ b/AgapeaDAM/Views/Cliente/InicioPanel.cshtml
@@ -40,7 +40,7 @@
                         <div class="text-muted">Foto</div>
                         <div id="avatarPerfil" class="card" style="width:200px;height:250px; background-color:aliceblue">
                             <input type="file" id="selectorImagen" accept="image/*" style="visibility:hidden;" />
-                            <a id="linkselectorImagen" onclick="document.getElementById('selectorImagen').dispatchEvent(new Event('MouseClick'))">
+                            <a id="linkselectorImagen" onclick="document.getElementById('selectorImagen').dispatchEvent(new MouseEvent('click'))">
                                 <img src="~/images/imagen_usuario_default.PNG"
                                      id="imagenUsuario"
                                      style="width:200;height:250;" />
